// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileAttachmentForm/> no props 1`] = `
<div>
  <span
    class="translator--toggle__wizard"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12"
      >
        <label
          class="control-label text-left"
        >
          <strong>
            Attachments
          </strong>
        </label>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12"
      >
        <div
          class="wizard-row--container"
        >
          <div
            class=""
          >
            <div
              class="file-upload--container block"
            >
              <label
                class="file-upload--label"
                for="fileUpload"
              >
                <i
                  aria-hidden="true"
                  class="fa fa-cloud-upload fa-2x cloud-logo"
                />
                Select file or drag and drop here.
              </label>
              <input
                accept=""
                class="file-upload--input"
                id="fileUpload"
                multiple=""
                name="fileUpload"
                type="file"
              />
            </div>
            <div
              class="file-upload--file-entry-listing"
            />
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`<FileAttachmentForm/> with attributes 1`] = `
<div>
  <span
    class="translator--toggle__wizard"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12"
      >
        <label
          class="control-label text-left"
        >
          <strong>
            file attachment
          </strong>
        </label>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12"
      >
        <div
          class="wizard-row--container"
        >
          <div
            class=""
          >
            <div
              class="file-upload--container block"
            >
              <label
                class="file-upload--label"
                for="fileUpload"
              >
                <i
                  aria-hidden="true"
                  class="fa fa-cloud-upload fa-2x cloud-logo"
                />
                Select file or drag and drop here.
              </label>
              <input
                accept=".tsv, .xls, .xlsx"
                class="file-upload--input"
                id="fileUpload"
                name="fileUpload"
                type="file"
              />
            </div>
            <div
              class="file-upload--file-entry-listing"
            />
          </div>
        </div>
      </div>
    </div>
  </span>
  <div
    class="row"
  >
    <div
      class="col-md-9"
    >
      <div
        class="file-form-formats"
      >
        <strong>
          Supported formats include: 
        </strong>
        .tsv, .xls, .xlsx
      </div>
    </div>
    <div
      class="col-md-3"
    >
      <div
        class="pull-right"
      >
        <a
          class="btn btn-info undefined"
          href="#downloadtemplateurl"
          rel="noopener noreferrer"
          target="_blank"
          title="Download Template"
        >
          <span
            class="fa fa-download"
          />
           
          Template
        </a>
      </div>
    </div>
  </div>
</div>
`;
